--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -39,11 +39,11 @@ jobs:
       run: |
         sed -i~orig -e 's/# deb-src/deb-src/' /etc/apt/sources.list   
         apt-get -qq update
-        apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl sudo systemd -y
+        apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl sudo -y
         apt-get -qq build-dep linux -y
         apt-get -qq autoremove --purge
         apt-get -qq clean
-        sudo timedatectl set-timezone "$TZ"
+        sudo date -s "$(wget -qSO- --max-redirect=0 google.com 2>&1 | grep Date: | cut -d' ' -f5-8)Z"
         mkdir -p /workdir
         sudo mkdir -p /workdir/upload
         sudo chown $USER:$GROUPS /workdir
