--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         sed -i~orig -e 's/# deb-src/deb-src/' /etc/apt/sources.list   
         apt-get -qq update
-        apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl sudo -y
+        apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl sudo time -y
         apt-get -qq build-dep linux -y
         apt-get -qq autoremove --purge
         apt-get -qq clean
