--- a/.github/workflows/Debian_kernel_latest.yml
+++ b/.github/workflows/Debian_kernel_latest.yml
@@ -37,6 +37,7 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
+        sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list
         apt-get -qq update
         apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl sudo time -y
         apt-get -qq build-dep linux -y
