--- a/.github/workflows/Ubuntu_kernel_arm64_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_arm64_latest.yml
@@ -27,6 +27,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: docker.io/ubuntu:20.04
 
     steps:
     - name: Checkout
@@ -36,16 +37,14 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        sudo -E sed -i~orig -e 's/# deb-src/deb-src/' /etc/apt/sources.list   
-        sudo -E apt-get -qq update
-        sudo -E apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl zstd libzstd-dev libzstd1 -y
-        sudo -E apt-get -qq build-dep linux -y
-        sudo -E apt-get -qq install build-essential binutils-multiarch ncurses-dev alien -y
-        sudo -E apt-get -qq install --install-recommends gcc-aarch64-linux-gnu -y
-        sudo -E apt-get -qq autoremove --purge
-        sudo -E apt-get -qq clean
-        sudo timedatectl set-timezone "$TZ"
-        sudo mkdir -p /workdir
+        sed -i~orig -e 's/# deb-src/deb-src/' /etc/apt/sources.list   
+        apt-get -qq update
+        apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl sudo time -y
+        apt-get -qq build-dep linux -y
+        apt-get -qq autoremove --purge
+        apt-get -qq clean
+        cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+        mkdir -p /workdir
         sudo mkdir -p /workdir/upload
         sudo chown $USER:$GROUPS /workdir
         sudo chown $USER:$GROUPS /workdir/upload
