--- a/.github/workflows/Ubuntu_kernel_arm64_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_arm64_latest.yml
@@ -39,12 +39,14 @@ jobs:
       run: |
         sed -i~orig -e 's/# deb-src/deb-src/' /etc/apt/sources.list   
         apt-get -qq update
-        apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl sudo time -y
+        apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl zstd libzstd-dev libzstd1 time sudo -y
         apt-get -qq build-dep linux -y
+        apt-get -qq install build-essential binutils-multiarch ncurses-dev alien -y
+        apt-get -qq install --install-recommends gcc-aarch64-linux-gnu -y
         apt-get -qq autoremove --purge
         apt-get -qq clean
         cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
-        mkdir -p /workdir
+        sudo mkdir -p /workdir
         sudo mkdir -p /workdir/upload
         sudo chown $USER:$GROUPS /workdir
         sudo chown $USER:$GROUPS /workdir/upload
