--- a/.github/workflows/Ubuntu_kernel_arm64_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_arm64_latest.yml
@@ -10,8 +10,8 @@ name: Ubuntu Kernel ARM64 latest
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "36 19 * * 2,6"
+  #schedule:
+    #- cron: "36 19 * * 2,6"
    # inputs:
     #  ssh:
      #   description: 'SSH connection to Actions'
