--- a/.github/workflows/Ubuntu_kernel_test.yml
+++ b/.github/workflows/Ubuntu_kernel_test.yml
@@ -27,7 +27,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: docker.io/qctt/ubuntu:latest
+    container: docker.io/qctt/kernelbuild:ubuntu20.04
     
     steps:
     - name: Checkout
@@ -109,7 +109,7 @@ jobs:
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success' && !cancelled()
       run: |
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
-        echo "::set-output name=release_tag::Ubuntu_Kernel_${kernel_ver}_test_bbr_$(date +"%Y.%m.%d-%H%M")"
+        echo "::set-output name=release_tag::Ubuntu_Kernel_${kernel_ver}_test_$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
         echo "::set-output name=status::success"
 
