--- a/.github/workflows/Centos_kernel_latest_xanmod_lts_C8.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_lts_C8.yml
@@ -27,22 +27,18 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: docker.io/centos:8
+    container: docker.io/qctt/kernelbuild:centos8
     
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
-      
-    - name: intall deps
+      uses: actions/checkout@main
+
+    - name: Initialization environment
+      env:
+        DEBIAN_FRONTEND: noninteractive
       run: |
-        yum update -y
-        yum install epel-release -y && yum install ansible -y && yum install openssh-clients -y
-        yum install -y wget tar gcc automake autoconf libtool make zip unzip scl-utils bzip2 wget curl jq htop sudo time patch zstd libzstd-devel
-        yum groups install development -y
-        yum install gcc bc ncurses-devel openssl-devel elfutils-libelf-devel rsync tmux -y
-        dnf --enablerepo=powertools install glibc-static -y
-        #yum -y install gcc-toolset-10-gcc
-        mkdir /github/home/.ssh/ && mkdir /workdir
+        sudo chown $USER:$GROUPS /workdir
+        sudo chown $USER:$GROUPS /workdir/upload
 
     - name: Check for updates
       id: check
