--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -49,8 +49,10 @@ jobs:
         echo "github_ver=" $github_ver
         echo "kernel_ver=" $kernel_ver
         if [[ $github_ver == *"$kernel_ver"* ]]; then
+            echo '::set-output name=action_echo::enabled'
             echo "::set-output name=status::fail"
         else
+            echo '::set-output name=action_echo::enabled'
             echo "::set-output name=status::success"
         fi
 
@@ -64,6 +66,7 @@ jobs:
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         wget -O kernel.tar.xz $kernel_file
         tar -Jxvf kernel.tar.xz -C /workdir && cd /workdir/linux-$kernel_ver
+		echo '::set-output name=action_echo::enabled'
         echo "::set-output name=status::success"
 
     - name: SSH connection to Actions
@@ -91,6 +94,7 @@ jobs:
         echo -e "$(nproc) thread compile"
         sudo time make -j$(nproc) deb-pkg
         cd /workdir && mv *.deb /workdir/upload
+        echo '::set-output name=action_echo::enabled'
         echo "::set-output name=status::success"
         echo "FILE_DATE=Kernel_Ubuntu_$kernel_ver_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV   
 
@@ -112,6 +116,7 @@ jobs:
         curl -fsSL git.io/file-transfer | sh
         ./transfer wet -s -p 16 --no-progress /workdir/upload 2>&1 | tee wetransfer.log
         echo "::warning file=wetransfer.com::$(cat wetransfer.log | grep https)"
+		echo '::set-output name=action_echo::enabled'
         echo "::set-output name=url::$(cat wetransfer.log | grep https | cut -f3 -d" ")"     
 
     - name: Generate release tag
@@ -119,8 +124,10 @@ jobs:
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success' && !cancelled()
       run: |
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
+		echo '::set-output name=action_echo::enabled'
         echo "::set-output name=release_tag::Ubuntu_Kernel_${kernel_ver}_latest_bbr_$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
+		echo '::set-output name=action_echo::enabled'
         echo "::set-output name=status::success"
 
     - name: Upload kernel to release
