--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -81,7 +81,7 @@ jobs:
         sudo sed -ri '/CONFIG_VIRTIO_NET/s/=.+/=y/g' ${config}
         sudo sed -ri '/CONFIG_TLS/s/=.+/=y/g' ${config}
         sudo sed -ri '/CONFIG_TLS_DEVICE/s/=.+/=y/g' ${config}
-        sudo sed -ri '/CONFIG_MPTCP*/c\CONFIG_MPTCP=y' ${config}
+        #sudo sed -ri '/CONFIG_MPTCP*/c\CONFIG_MPTCP=y' ${config}
         #sudo sed -i 's/.*CONFIG_KERNEL_ZSTD.*/CONFIG_KERNEL_ZSTD=n/' ${config}
         #sudo sed -i 's/.*CONFIG_KERNEL_ZSTD.*/CONFIG_KERNEL_ZSTD=n/' ${config}
         #sudo sed -i 's/.*CONFIG_RD_ZSTD.*/CONFIG_RD_ZSTD=n/' ${config}
