--- a/.github/workflows/Debian_kernel_latest_xanmod_lts.yml
+++ b/.github/workflows/Debian_kernel_latest_xanmod_lts.yml
@@ -79,9 +79,14 @@ jobs:
           cp CONFIGS/xanmod/gcc/config .config
         fi
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
-        sed -ri '/CONFIG_TLS/s/=.+/=y/g' .config
-        sed -ri '/CONFIG_TLS_DEVICE/s/=.+/=y/g' .config
-        sed -ri '/CONFIG_MPTCP*/c\CONFIG_MPTCP=m' .config
+        scripts/config --disable MODULE_SIG
+        scripts/config --disable DEBUG_INFO
+        scripts/config --disable DEBUG_INFO_BTF
+        scripts/config --disable DEBUG_INFO_DWARF4
+        scripts/config --disable DEBUG_INFO_DWARF5
+        scripts/config --disable DEBUG_INFO_NONE
+        scripts/config --disable SYSTEM_TRUSTED_KEYS
+        scripts/config --disable SYSTEM_REVOCATION_KEYS
         echo -e "$(nproc) thread compile"
         sudo time make -j$(nproc) deb-pkg
         cd /workdir && mv *.deb /workdir/upload
