--- a/.github/workflows/Centos_kernel_latest_xanmod_lts_gcc9.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_lts_gcc9.yml
@@ -79,9 +79,14 @@ jobs:
           cp CONFIGS/xanmod/gcc/config .config
         fi
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
-        sed -ri '/CONFIG_TLS/s/=.+/=y/g' .config
-        sed -ri '/CONFIG_TLS_DEVICE/s/=.+/=y/g' .config
-        sed -ri '/CONFIG_MPTCP*/c\CONFIG_MPTCP=y' .config
+        scripts/config --disable MODULE_SIG
+        scripts/config --disable DEBUG_INFO
+        scripts/config --disable DEBUG_INFO_BTF
+        scripts/config --disable DEBUG_INFO_DWARF4
+        scripts/config --disable DEBUG_INFO_DWARF5
+        scripts/config --disable DEBUG_INFO_NONE
+        scripts/config --disable SYSTEM_TRUSTED_KEYS
+        scripts/config --disable SYSTEM_REVOCATION_KEYS
         echo -e "$(nproc) thread compile"
         ln -s /opt/rh/devtoolset-9/root/usr/bin/* /usr/local/bin/
         sudo time make -j$(nproc) rpm-pkg
