--- a/.github/workflows/Debian_kernel_arm64_latest.yml
+++ b/.github/workflows/Debian_kernel_arm64_latest.yml
@@ -84,12 +84,6 @@ jobs:
         #wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/5.13.arm64.config
         wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/kernel-aarch64-rhel.config
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config
-        scripts/config --disable MODULE_SIG
-        scripts/config --disable DEBUG_INFO
-        scripts/config --disable DEBUG_INFO_BTF
-        scripts/config --disable DEBUG_INFO_DWARF4
-        scripts/config --disable DEBUG_INFO_DWARF5
-        scripts/config --disable DEBUG_INFO_NONE
         sed -ri '/CONFIG_DEBUG_KERNEL=/c\CONFIG_DEBUG_KERNEL=n' .config
         sed -ri '/CONFIG_DEBUG_MISC=/c\CONFIG_DEBUG_MISC=n' .config
         sed -ri '/CONFIG_MODULE_SIG=/c\CONFIG_MODULE_SIG=n' .config
@@ -98,6 +92,14 @@ jobs:
         sed -i 's/.*CONFIG_DEBUG_INFO_DWARF4.*/CONFIG_DEBUG_INFO_DWARF4=n/' .config
         sed -i 's/.*CONFIG_DEBUG_INFO_DWARF5.*/CONFIG_DEBUG_INFO_DWARF5=n/' .config
         sed -i 's/.*CONFIG_DEBUG_INFO_NONE.*/CONFIG_DEBUG_INFO_NONE=n/' .config
+        scripts/config --disable MODULE_SIG
+        scripts/config --disable DEBUG_INFO
+        scripts/config --disable DEBUG_INFO_BTF
+        scripts/config --disable DEBUG_INFO_DWARF4
+        scripts/config --disable DEBUG_INFO_DWARF5
+        scripts/config --disable DEBUG_INFO_NONE
+        scripts/config --disable SYSTEM_TRUSTED_KEYS
+        scripts/config --disable SYSTEM_REVOCATION_KEYS
         echo -e "$(nproc) thread compile"
         sudo time make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc) deb-pkg
         cd /workdir && mv *.deb /workdir/upload
